<resources>
    <!--General-->
    <string name="app_name">Selenium</string>
    <string name="openMn">Abrir menú</string>
    <string name="closeMn">Cerrar menú</string>

    <!--Layout-->

    <string name="desc_logo">App logo</string>
    <string name="mail">Correo</string>
    <string name="username">Nombre de usuario</string>

    <string name="log_pass">Contraseña</string>
    <string name="log_login">Iniciar sesión</string>
    <string name="log_frgtpass">¿Olvidaste tu contraseña?</string>
    <string name="log_reg">¿No tienes cuenta?\n¡Regístrate!</string>

    <string name="reg_birthday">Cumpleaños</string>
    <string name="reg_pass_conf">Confirmar contraseña</string>
    <string name="reg_register">Crear cuenta</string>

    <string name="logout">Cerrar sesión</string>
    <string name="calendar_weeks">Semanas</string>
    <string name="calendar_months">Meses</string>
    <string name="calendar">Calendario</string>
    <string name="tasks">Tareas</string>
    <string name="calendar_days">Días</string>
    <string name="all_tasks">Todas</string>
    <string name="not_done_tasks">No hechas</string>
    <string name="done_tasks">Hechas</string>
    <string name="account">Cuenta</string>
    <string name="start">Inicio</string>

    <!--Code-->
    <!--Formats-->
    <string name="date_formatter" translatable="false">%1$d/%2$d/%3$d</string>
    <string name="datetime_formatter" translatable="false">%1$d/%2$d/%3$d %4$d:%5$d</string>
    <!--Errors-->
    <string name="err_default">Algo ha salido mal: %1$s</string>
    <string name="err_empty_field">Favor de no dejar campo vacío.</string>
    <string name="err_pass_not_match">Contraseñas no coinciden.</string>
    <string name="err_pass_not_secure">Contraseña debe incluir por lo menos una mayuscula, minuscula, número y 8 caracteres.</string>
    <string name="err_wrong_format">Formato incorrecto.</string>
    <string name="err_date_not_past">Esta fecha no ha pasado.</string>
    <string name="err_email_used">Este correo ya está en uso por otro usuario.</string>
    <string name="err_wrong_email">Este correo no está asociado con ninguna cuenta.</string>
    <string name="err_wrong_pass">Contraseña incorrecta.</string>

    <!-- placeholders -->
    <string name="PH_task_title" translatable="false">taskTitle</string>
    <string name="PH_task_category" translatable="false">taskCategory</string>

    <!-- actions -->
    <string name="ACT_mark_as_done">Marcar como completada.</string>
    <string name="ACT_edit">Editar</string>
    <string name="ACT_delete">Eliminar</string>
    <string name="ACT_mark_progress">Progreso</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="new_task">Nueva tarea</string>
    <string name="menu_all_to_do">Todas las tareas</string>
    <string name="low">Baja</string>
    <string name="mid">Media</string>
    <string name="high">Alta</string>
    <string name="date">Fecha</string>
    <string name="submit_desc">Subir tarea.</string>
    <string name="advanced_settings">Configuración avanzada</string>
    <string name="add_task">Añadir tarea</string>
    <string name="title">Titulo</string>
    <string name="priority">Prioridad</string>
    <string name="add">Añadir</string>
    <string name="time">Hora</string>
    <string name="category">Categoria</string>
    <string name="no_folder">Default</string>
    <string name="no_options">No hay opciones disponibles</string>
    <string name="time_undefined">Indefinida</string>
    <string name="time_defined">Definida</string>
    <string name="time_repetitive">Repetida</string>
    <string name="PH_urgency" translatable="false">urgency</string>
    <string name="task_in_progress_indicator">Tarea en progreso</string>
    <string name="folders">Categorías</string>
    <string name="PH_folder" translatable="false">Folder</string>
    <string name="PH_task_date_done" translatable="false">TaskDateDone</string>
    <string name="days">Días</string>
    <string name="daily">Diario</string>
    <string name="abr_monday">Lun</string>
    <string name="abr_tuesday">Mar</string>
    <string name="abr_wednesday">Mie</string>
    <string name="abr_thursday">Jue</string>
    <string name="abr_friday">Vie</string>
    <string name="abr_saturday">Sab</string>
    <string name="abr_sunday">Dom</string>
    <string name="task_uploaded">Tarea guardada exitosamente</string>
    <string name="err_select_days">Seleccione por lo menos un día.</string>
    <string name="add_folder">Añadir categoria</string>
    <string name="err_too_long">El texto introducido es demasiado grande.</string>
    <string name="folder_uploaded">Categoria creada exitosamente.</string>
    <string name="upTasks">Tareas proximas</string>
    <string name="upTask">Tarea proxima</string>
    <string name="upcomingTaskDayBody">%1$s debe ser terminad@ en un día.</string>
    <string name="upcomingTaskHourBody">%1$s debe ser terminad@ en una hora.</string>
    <string name="dueTask">Tarea en fecha</string>
    <string name="dueTaskBody">%1$s debería estar terminada.</string>
    <string name="today">Hoy</string>
    <string name="no_upc_task">No tiene tareas proximas.</string>
    <string name="welcome">Bienvenid@ %1$s.</string>
    <string name="no_rep_tasks">No se han encontrado tareas semanales para hoy</string>
    <string name="no_date_tasks">Tareas sin fecha</string>
    <string name="no_nodate_task">No tiene tareas con fecha indeterminada.</string>
    <string name="edit_folder">Editar categoria</string>
    <string name="folder_updated">Categoria editada exitosamente.</string>
    <string name="ACT_erase_filters">Borrar filtros</string>
    <string name="CONF_delete_folder">Confirmar eliminar categoria</string>
    <string name="CONF_delete_folder_msg">Esto tambien borrará todas las tareas dentro de la categoria</string>
</resources>