<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".toDoMenus.AddEditTaskRepeatingFields">

    <!-- TODO: Rename IDs-->

    <nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup
        android:id="@+id/WeekGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="3dp"
        app:justifyContent="center"
        app:flexWrap="wrap"
        app:toggle_horizontalSpacing="12dp"
        app:toggle_selectableAmount="7"
        app:toggle_requiredAmount="1">

        <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
            android:layout_marginTop="5dp"
            android:id="@+id/mondayBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:toggle_text="@string/abr_monday"
            app:toggle_selectedBackgroundColor="@color/red_blue"
            app:toggle_textSize="18sp"
            style="@style/BTTN2"
            />

        <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
            android:layout_marginTop="5dp"
            android:id="@+id/tuesdayBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:toggle_text="@string/abr_tuesday"
            app:toggle_selectedBackgroundColor="@color/midpoint_red_main"
            app:toggle_textSize="18sp"
            style="@style/BTTN2"
            />

        <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
            android:layout_marginTop="5dp"
            android:id="@+id/wednesdayBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:toggle_text="@string/abr_wednesday"
            app:toggle_selectedBackgroundColor="@color/midpoint_main_red"
            app:toggle_textSize="18sp"
            style="@style/BTTN2"
            />

        <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
            android:layout_marginTop="5dp"
            android:id="@+id/thursdayBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:toggle_text="@string/abr_thursday"
            app:toggle_selectedBackgroundColor="@color/main_blue"
            app:toggle_textSize="18sp"
            style="@style/BTTN2"
            />

        <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
            android:layout_marginTop="5dp"
            android:id="@+id/fridayBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:toggle_text="@string/abr_friday"
            app:toggle_selectedBackgroundColor="@color/midpoint_main_green"
            app:toggle_textSize="18sp"
            style="@style/BTTN2"
            />

        <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
            android:layout_marginTop="5dp"
            android:id="@+id/saturdayBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:toggle_text="@string/abr_saturday"
            app:toggle_selectedBackgroundColor="@color/midpoint_green_main"
            app:toggle_textSize="18sp"
            style="@style/BTTN2"
            />

        <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
            android:layout_marginTop="5dp"
            android:id="@+id/sundayBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:toggle_text="@string/abr_sunday"
            app:toggle_selectedBackgroundColor="@color/green_blue"
            app:toggle_textSize="18sp"
            style="@style/BTTN2"
            />
    </nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/WeekGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/TaskTime"
        android:hint="@string/time"
        app:endIconDrawable="@drawable/ic_clock"
        app:endIconMode="custom"
        style="@style/outlinedTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:longClickable="false"
            android:clickable="true"
            android:inputType="time"
            android:fontFamily="@font/louiscafe"
            style="@style/TXT"/>

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>