<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingHorizontal="5dp"
    android:paddingVertical="10dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/CRD">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <ImageView
                android:id="@+id/ProgressIndicator"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintEnd_toStartOf="@id/doneBtn"
                app:tint="@color/darkestwhite"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/ic_wip"
                android:visibility="gone"
                android:contentDescription="@string/task_in_progress_indicator"/>

            <ImageView
                android:id="@+id/PriorityIndicator"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/ic_prio_mid"
                android:contentDescription="@string/PH_urgency"
                />

            <TextView
                android:id="@+id/TaskCategory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/PriorityIndicator"
                app:layout_constraintEnd_toStartOf="@id/clockIcon"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginHorizontal="5dp"
                style="@style/TXT"
                android:textSize="15sp"
                android:textStyle="bold"
                android:fontFamily="@font/planner"
                android:text="@string/PH_task_category"/>



            <TextView
                android:id="@+id/TaskTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/TaskTime"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/doneBtn"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="5dp"
                android:textAlignment="center"
                style="@style/TXT"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/planner"
                android:text="@string/PH_task_title"/>

            <ImageView
                android:id="@+id/doneBtn"
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/ic_done"
                app:tint="@color/main_blue"
                android:contentDescription="@string/ACT_mark_as_done" />

            <View
                android:id="@+id/separator"
                android:layout_width="3dp"
                android:layout_height="0dp"
                android:layout_marginEnd="5dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/doneBtn"
                tools:ignore="true"
                style="@style/TOLBR"/>


            <ImageView
                android:id="@+id/clockIcon"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginHorizontal="5dp"
                app:layout_constraintStart_toEndOf="@id/TaskCategory"
                app:layout_constraintEnd_toStartOf="@id/TaskTime"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"
                android:src="@drawable/ic_clock"
                app:tint="@color/main_blue"
                android:contentDescription="@string/date" />

            <TextView
                android:id="@+id/TaskTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/clockIcon"
                app:layout_constraintEnd_toStartOf="@id/separator"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginHorizontal="5dp"
                android:layout_marginEnd="10dp"
                android:text="@string/time"
                style="@style/TXT"
                android:textSize="15sp"
                android:textStyle="bold"
                android:fontFamily="@font/planner"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>