<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:paddingVertical="4dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/darkestwhite"
        style="@style/CRD">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <ImageView
                android:id="@+id/PriorityIndicator"
                app:layout_constraintTop_toTopOf="@id/TaskDateDone"
                app:layout_constraintBottom_toBottomOf="@id/TaskCategory"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/ic_prio_mid"
                android:contentDescription="@string/PH_urgency"
                />

            <TextView
                android:id="@+id/TaskDateDone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/PriorityIndicator"
                app:layout_constraintEnd_toStartOf="@id/deleteBtn"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginHorizontal="5dp"
                style="@style/TXT"
                android:textSize="12sp"
                android:textStyle="bold"
                android:fontFamily="@font/planner"
                android:text="@string/PH_task_date_done"/>

            <TextView
                android:id="@+id/TaskCategory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/PriorityIndicator"
                app:layout_constraintEnd_toStartOf="@id/deleteBtn"
                app:layout_constraintTop_toBottomOf="@id/TaskDateDone"
                android:layout_marginHorizontal="5dp"
                style="@style/TXT"
                android:textSize="12sp"
                android:textStyle="bold"
                android:fontFamily="@font/planner"
                android:text="@string/PH_task_category"/>

            <TextView
                android:id="@+id/TaskTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/TaskCategory"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/deleteBtn"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="5dp"
                style="@style/TXT"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/planner"
                android:text="@string/PH_task_title"/>

            <ImageView
                android:id="@+id/deleteBtn"
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/ic_delete"
                app:tint="@color/red"
                android:contentDescription="@string/ACT_mark_as_done" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>